# athena-python-udf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
athena_udf/: __init__.py  base.py  utils.py
examples/: README.md
examples/multithreading/: README.md  lambda_handler.py  requirements.txt
examples/pandas/: README.md  lambda_handler.py  requirements.txt
examples/simple-varchar/: Makefile  README.md  lambda_handler.py
tests/: test_athena_udf.py
tests/unit/: test_athena_udf.py  test_utils.py
